package org.pancakelab.model;

public enum OrderStatus {
	INITIATED, COMPLETED, PREPARED, DELIVERED, CANCELLED 
}
